RESOLVED FIXED90412
IndexedDB: Ensure transaction abort events are deterministic in multiprocess ports
https://bugs.webkit.org/show_bug.cgi?id=90412
Summary IndexedDB: Ensure transaction abort events are deterministic in multiprocess ...
Joshua Bell
Reported 2012-07-02 16:43:39 PDT
IndexedDB: Ensure transaction abort events are deterministic in multiprocess ports
Attachments
Patch (9.47 KB, patch)
2012-07-02 16:52 PDT, Joshua Bell
no flags
Patch for landing (9.48 KB, patch)
2012-07-10 13:08 PDT, Joshua Bell
no flags
Archive of layout-test-results from ec2-cq-01 (780.71 KB, application/zip)
2012-07-10 16:16 PDT, WebKit Review Bot
no flags
Joshua Bell
Comment 1 2012-07-02 16:52:41 PDT
Joshua Bell
Comment 2 2012-07-02 16:54:30 PDT
dgrogan@, alecflett@ - please take a look Once this lands we should be able to re-enable transaction-abort.html in the Chromium browser/layout tests crbug.com/83226
Joshua Bell
Comment 3 2012-07-09 10:23:07 PDT
Comment on attachment 150500 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=150500&action=review > Source/WebCore/Modules/indexeddb/IDBRequest.h:131 > + bool m_requestAborted; // May be aborted by transaction then receive async onsuccess; ignore vs. assert. Could alternately name this m_aborted but tried to align with m_requestFinished (which IIRC is so named to distinguish from m_cursorFOO, m_contextFOO etc)
Alec Flett
Comment 4 2012-07-10 11:57:39 PDT
LGTM
Joshua Bell
Comment 5 2012-07-10 13:08:48 PDT
Created attachment 151505 [details] Patch for landing
WebKit Review Bot
Comment 6 2012-07-10 16:16:03 PDT
Comment on attachment 151505 [details] Patch for landing Rejecting attachment 151505 [details] from commit-queue. New failing tests: perf/object-keys.html Full output: http://queues.webkit.org/results/13199128
WebKit Review Bot
Comment 7 2012-07-10 16:16:06 PDT
Created attachment 151548 [details] Archive of layout-test-results from ec2-cq-01 The attached test failures were seen while running run-webkit-tests on the commit-queue. Bot: ec2-cq-01 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
WebKit Review Bot
Comment 8 2012-07-10 21:24:38 PDT
Comment on attachment 151505 [details] Patch for landing Clearing flags on attachment: 151505 Committed r122291: <http://trac.webkit.org/changeset/122291>
WebKit Review Bot
Comment 9 2012-07-10 21:24:42 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.